--- a/Businessas/main/static/main/css/style.css
+++ b/Businessas/main/static/main/css/style.css
@@ -1,11 +1,11 @@
 div[class^=col]{
   /*background: #8CC7D9;*/
   /*border: 1px solid #6B6ACD;*/
-  padding-right: 5px;
-  padding-left: 5px;
+  /*padding-right: 5px;*/
+  /*padding-left: 5px;*/
 }
 
-.osnova { max-width: 1350px; margin:0 auto;}
+/*.osnova { max-width: 1350px; margin:0 auto;}*/
 
 @font-face {
   font-family: 'Rubik_lg';
@@ -90,7 +90,7 @@ h1{
 
 .my_txt{
   font-family: "Rubik_rg";
-  font-size: 27px;
+  font-size: 31px;
   margin-left: 2.25%;
 }
 
@@ -248,6 +248,7 @@ h1{
 
 /*Hover Fall Effect*/
 
+/* Общие стили */
 *, *:after, *:before {
   /*border-box;*/
   box-sizing: border-box;
@@ -285,7 +286,7 @@ h1{
   padding: 2em;
   color: #fff;
   text-transform: uppercase;
-  font-size: 100%;
+  font-size: 1.25em;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
@@ -301,8 +302,11 @@ h1{
   height: 100%;
 }
 .hover-text-one figure h3 {
+  font-size: 110%;
   word-spacing: -0.15em;
   font-weight: 300;
+  padding-left: 4%;
+  padding-right: 4%;
 }
 .hover-text-one figure h3 span {
   font-weight: 800;
@@ -313,7 +317,73 @@ h1{
 }
 .hover-text-one figure p {
   letter-spacing: 1px;
-  font-size: 68.5%;
+}
+
+
+
+@media (max-width: 60000px) and (min-width: 1320px) {
+  .hover-text-one figure p {
+    font-size: 60%;
+  }
+}
+@media (max-width: 1319px) and (min-width: 1090px) {
+  .hover-text-one figure p {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 1090px) and (min-width: 991px) {
+  .hover-text-one figure p {
+    font-size: 40%;
+  }
+}
+
+@media (max-width: 991px) and (min-width: 850px) {
+  .hover-text-one figure p {
+    font-size: 60%;
+  }
+}
+
+@media (max-width: 850px) and (min-width: 720px) {
+  .hover-text-one figure p {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 720px) and (min-width: 620px) {
+  .hover-text-one figure p {
+    font-size: 40%;
+  }
+}
+
+@media (max-width: 620px) and (min-width: 575px) {
+  .hover-text-one figure p {
+    font-size: 35%;
+  }
+}
+
+@media (max-width: 575px) and (min-width: 420px) {
+  .hover-text-one figure p {
+    font-size: 60%;
+  }
+}
+
+@media (max-width: 60000px) and (min-width: 991px) {
+  .my_center{
+    display: none;
+  }
+}
+/*@media (max-width: 768px) and (min-width: 576px) {*/
+/*  .hover-text-one figure p {*/
+/*    font-size: 50%;*/
+/*  }*/
+@media screen and (max-width: 420px) {
+  .hover-text-one figure p {
+    font-size: 45%;
+  }
+  .my_center{
+    display: none;
+  }
 }
 
 /* Эффект при наведении */
@@ -329,7 +399,7 @@ figure.effect-text-two figcaption::before {
 }
 figure.effect-text-two h3 {
   position: absolute;
-  top: 50%;
+  top: 44%;
   left: 0;
   width: 100%;
   color: #ffffff !important;
@@ -349,116 +419,27 @@ figure.effect-text-two p {
   left: 0;
   padding: 2em;
   width: 100%;
+  height: 60%;
   opacity: 0;
   -webkit-transform: translate3d(0,10px,0);
   transform: translate3d(0,10px,0);
 }
+
 figure.effect-text-two:hover h3 {
   color: #fff;
-  -webkit-transform: translate3d(0,-60%,0) translate3d(0,-60px,0);
-  transform: translate3d(0,-60%,0) translate3d(0,-60px,0);
+  -webkit-transform: translate3d(0,-50%,0) translate3d(0,-40px,0);
+  transform: translate3d(0,-70%,0) translate3d(0,-40px,0);
 }
-@media (max-width: 60000px) and (min-width: 1300px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-85%,0);
-    transform: translate3d(0,-85%,0);
-  }
-}
-
-@media (max-width: 1300px) and (min-width: 1200px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-60%,0);
-    transform: translate3d(0,-60%,0);
-  }
-}
-
-@media (max-width: 1200px) and (min-width: 1150px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-55%,0);
-    transform: translate3d(0,-55%,0);
-  }
-}
-
-@media (max-width: 1150px) and (min-width: 1100px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-45%,0);
-    transform: translate3d(0,-45%,0);
-  }
-}
-
-@media (max-width: 1150px) and (min-width: 1050px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-40%,0);
-    transform: translate3d(0,-40%,0);
-  }
-}
-
-@media (max-width: 1050px) and (min-width: 993px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-30%,0);
-    transform: translate3d(0,-30%,0);
-  }
-}
-
-@media (max-width: 993px) and (min-width: 863px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-85%,0);
-    transform: translate3d(0,-85%,0);
-  }
-}
-
-@media (max-width: 863px) and (min-width: 800px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-70%,0);
-    transform: translate3d(0,-70%,0);
-  }
-}
-
-@media (max-width: 800px) and (min-width: 768px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-60%,0);
-    transform: translate3d(0,-60%,0);
-  }
-}
-
-@media (max-width: 768px) and (min-width: 419px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-80%,0);
-    transform: translate3d(0,-80%,0);
-  }
-}
-
-@media (max-width: 419px) and (min-width: 350px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-65%,0);
-    transform: translate3d(0,-65%,0);
-  }
-}
-
-@media screen and (max-width: 350px) {
-  figure.effect-text-two:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,-40%,0);
-    transform: translate3d(0,-40%,0);
-  }
-}
-
-
-figure.effect-text-two:hover figcaption::before{
+figure.effect-text-two:hover p {
   opacity: 1;
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
+}
+
+figure.effect-text-two:hover figcaption::before{
+  opacity: 1;
+  -webkit-transform: translate3d(0,0,0) translate3d(0,0,0);
+  transform: translate3d(0,0,0) translate3d(0,0,0);
 }
 
 @media (max-width: 60000px) and (min-width: 929px) {
@@ -495,8 +476,8 @@ figure.effect-text-two:hover figcaption::before{
 
 .btn.hvr-hollow:hover,.btn.hvr-hollow:focus,.btn.hvr-hollow:active {
   background: white;
-  color: black;
   box-shadow: inset 0 0 0 2px #e51739;
+  color: black;
 }
 
 /*FLIP CARDS*/
@@ -611,6 +592,7 @@ figure.effect-text-two:hover figcaption::before{
   transform: rotateY(0deg);
 }
 
+
 /* Testimonials Section
 --------------------------------*/
 
@@ -663,4 +645,16 @@ figure.effect-text-two:hover figcaption::before{
 
 #testimonials .owl-dot.active {
   background-color: #475d65;
+}
+
+@media (max-width: 60000px) and (min-width: 454px) {
+  .m_blok{
+    display: none;
+  }
+}
+
+@media screen and (max-width: 454px) {
+  .b_blok{
+    display: none;
+  }
 }
