Вернул Лену назад

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -416,7 +416,7 @@
                     </a>
                     <a class="card" href="#!">
                         <div class="front">
-                            <img src="{% static 'main/img/image_2022-11-19_14-27-44.png' %}" alt="">
+                            <img src="{% static 'main/img/DSC07232.png' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
