--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -551,7 +551,7 @@
             <br>
             <div class="row">
                 <div class="col-xl-1 col-md-1 col-sm-0"></div>
-                <div class="col-xl-6 col-md-6 col-sm-12 down_blok" style="margin-top: 0px;padding-top: 20px;padding-left: 40px;padding-right: 40px;padding-bottom: 30px;max-width: 650px;margin-left: auto;margin-right: auto;">
+                <div class="col-xl-6 col-md-6 col-sm-12 down_blok" style="margin-top: 0px;padding-top: 20px;padding-left: 40px;padding-right: 40px;padding-bottom: 30px;max-width: 650px; border-radius: 10px">
                     <div class="row">
                         <div class="col-6" style="font-family: Regular;font-size: 25pt;line-height: 85%;padding-left: 0px;">Контактная <br> информация</div>
                         <div class="col-6 text-right">
