Предфинальная версия сайта

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -121,7 +121,7 @@
                 <div class="col-md-6 col-sm-12 block_1">
                     <div class="col-12">
                         <div class="">
-                            <h1 class="text-left" style="margin-left: 2%; font-family: Rubik-ext"><span style="color: #e50e3a">Б</span>изнес <span style="color: #e50e3a">А</span>ссистент</h1>
+                            <h1 class="text-left" style="margin-left: 2%; font-family: Rubik-ext"><span style="color: #e50e3a">Б</span>изнес <br><span style="color: #e50e3a">А</span>ссистент</h1>
                             <div class="my_txt text-left" style="line-height: 110%;">Полный спектр услуг<br>для успешного ведения бизнеса</div>
                             <div class="my_txt text-left typewrite" data-period="1000" data-type='[ "Бухгалтерия", "Налоги", "Юристы" ]' style="color: #e50e3a;"><span class="wrap"></span></div>
                             <br>
@@ -205,7 +205,6 @@
                         <figcaption>
                             <h3>Сопровождение работы с маркетплейсами</h3>
                             <p>Автоматизация учета, налоги, экспертный аудит правильности расчетов за проданный товар с учетом удержаний и бонусов<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 10 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
-                            <!--                  <p><a href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>-->
                         </figcaption>
                     </figure>
                 </div>
@@ -215,7 +214,6 @@
                         <figcaption>
                             <h3>Оптимизация работы с онлайн-кассами, эквайрингом </h3>
                             <p>Чеки коррекции, ОФД. Постановка/снятие кассы на учет в налоговой. Отражение поступлений эквайринга в учете<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 1 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
-                            <!--                  <p><a href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>-->
                         </figcaption>
                     </figure>
                 </div>
@@ -225,7 +223,6 @@
                         <figcaption>
                             <h3>Подбор и внедрение облачных решений для приема денег онлайн </h3>
                             <p>Прием денег через интернет на сайт, по ссылкам, через СБП, через платежных агрегаторов ЮКаssa, Продамус, Робокасса и др. Или оплата на месте по QR-коду<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 3 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
-                            <!--                  <p><a href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>-->
                         </figcaption>
                     </figure>
                 </div>
@@ -235,7 +232,6 @@
                         <figcaption>
                             <h3>Маркировка, лицензирование, прослеживаемые товары, ФГИС, ЭДО</h3>
                             <p>Работа в системе “Честный знак”, проведение маркировки, занесение данных по товарам, получение электронной подписи. Настроим ЭДО, внесем данные в ФГИС<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 3 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
-                            <!--                  <p><a href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>-->
                         </figcaption>
                     </figure>
                 </div>
@@ -245,7 +241,6 @@
                         <figcaption>
                             <h3>Налоговые <br> вопросы</h3>
                             <p>Возьмем на себя общение с налоговой, ответим на требования, разберемся с недоимкой. Получим патент. Правильно заполним и сдадим декларацию<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 4 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
-                            <!--                  <p><a href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>-->
                         </figcaption>
                     </figure>
                 </div>
@@ -255,7 +250,6 @@
                         <figcaption>
                             <h3>Регистрация/ ликвидация бизнеса</h3>
                             <p>Проведем онлайн регистрацию/ликвидацию/изменения ООО, ИП. Удаленно подадим уведомления в Вестник и Федресурс. Сдадим ликвидационную отчетность<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 8 000 рублей</span><br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a> </p>
-                            <!--                  <p><a href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>-->
                         </figcaption>
                     </figure>
                 </div>
@@ -265,7 +259,6 @@
                         <figcaption>
                             <h3>Корпоративные юридические задачи</h3>
                             <p>Составим договоры, понятно объясним юридические тонкости, проконсультируем, поможем в составлении претензий и урегулировании споров<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 5 000 рублей</span><br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
-                            <!--                  <p><a href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>-->
                         </figcaption>
                     </figure>
                 </div>
