--- a/Businessas/main/static/main/css/style.css
+++ b/Businessas/main/static/main/css/style.css
@@ -85,7 +85,7 @@ div[class^=col]{
 h1{
   margin-top: 19%;
   font-family: "Rubik-ext";
-  font-size: 336%;
+  font-size: min(max(40px, 6vw), 336%)
 }
 
 .my_txt{
@@ -428,11 +428,12 @@ h1{
   height: 100%;
 }
 .hover-text-one figure h3 {
-  font-size: 110%;
+  font-size: 90%;
   word-spacing: -0.15em;
   font-weight: 300;
   padding-left: 4%;
   padding-right: 4%;
+  font-family: "Rubik_rg";
 }
 .hover-text-one figure h3 span {
   font-weight: 800;
@@ -443,6 +444,7 @@ h1{
 }
 .hover-text-one figure p {
   letter-spacing: 1px;
+  /*font-family: "Rubik_rg";*/
 }
 
 
@@ -494,6 +496,17 @@ h1{
   }
 }
 
+@media (max-width: 420px) and (min-width: 340px) {
+  .hover-text-one figure p {
+    font-size: 50%;
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .hover-text-one figure p {
+    font-size: 40%;
+  }
+}
 @media (max-width: 60000px) and (min-width: 991px) {
   .my_center{
     display: none;
@@ -504,9 +517,6 @@ h1{
 /*    font-size: 50%;*/
 /*  }*/
 @media screen and (max-width: 420px) {
-  .hover-text-one figure p {
-    font-size: 50%;
-  }
   .my_center{
     display: none;
   }
