Выровнен текст услуг

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -195,7 +195,7 @@
                         <img class="img-fluid" src="{% static 'main/img/1. Бухгалтерское обсуживание.jpg' %}" alt=""/>
                         <figcaption>
                             <h3>Бухгалтерское обслуживание</h3>
-                            <p>Подготовим платёжки, счета, накладные. Проведем сверки. Сдадим отчеты. Правильно трудоустроим сотрудников, начислим зарплату, оформим отпуск и больничный. Быстро разблокируем счет <br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 5 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                            <p>Подготовим платёжки, счета, накладные. Проведем сверки.<br>Сдадим отчеты.<br>Правильно трудоустроим<br>сотрудников,<br>начислим зарплату,<br>оформим отпуск и больничный. Быстро разблокируем счет <br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 5 000 рублей</span> <br><a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
                         </figcaption>
                     </figure>
                 </div>
@@ -203,8 +203,8 @@
                     <figure class="effect-text-two">
                         <img class="img-fluid" src="{% static 'main/img/2. Сопровождение работ с маркетплейсами.jpg' %}" alt=""/>
                         <figcaption>
-                            <h3>Сопровождение работы с маркетплейсами</h3>
-                            <p>Автоматизация учета, налоги, экспертный аудит правильности расчетов за проданный товар с учетом удержаний и бонусов<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 10 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                            <h3>Сопровождение работы<br>с маркетплейсами</h3>
+                            <p>Автоматизация учета, налоги,<br>экспертный аудит правильности<br>расчетов за проданный товар<br>с учетом удержаний и бонусов<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 10 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
                         </figcaption>
                     </figure>
                 </div>
@@ -212,8 +212,8 @@
                     <figure class="effect-text-two">
                         <img class="img-fluid" src="{% static 'main/img/3. Оптимизация работы с онлайн-кассами, эквайрингом.jpg' %}" alt=""/>
                         <figcaption>
-                            <h3>Оптимизация работы с онлайн-кассами, эквайрингом </h3>
-                            <p>Чеки коррекции, ОФД. Постановка/снятие кассы на учет в налоговой. Отражение поступлений эквайринга в учете<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 1 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                            <h3>Оптимизация работы<br>с онлайн-кассами,<br>эквайрингом </h3>
+                            <p>Чеки коррекции, ОФД.<br>Постановка/снятие кассы<br>на учет в налоговой.<br>Отражение поступлений<br>эквайринга в учете<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 1 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
                         </figcaption>
                     </figure>
                 </div>
@@ -221,8 +221,8 @@
                     <figure class="effect-text-two">
                         <img class="img-fluid" src="{% static 'main/img/4. Подбор и внедрение облачныхрешений для приема денег онлайн.jpg' %}" alt=""/>
                         <figcaption>
-                            <h3>Подбор и внедрение облачных решений для приема денег онлайн </h3>
-                            <p>Прием денег через интернет на сайт, по ссылкам, через СБП, через платежных агрегаторов ЮКаssa, Продамус, Робокасса и др. Или оплата на месте по QR-коду<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 3 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                            <h3>Подбор и внедрение<br>облачных решений для<br>приема денег онлайн </h3>
+                            <p>Прием денег через интернет на сайт,<br>по ссылкам, через СБП,<br>через платежных агрегаторов<br>ЮКаssa, Продамус, Робокасса и др.<br>Или оплата на месте по QR-коду<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 3 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
                         </figcaption>
                     </figure>
                 </div>
@@ -230,8 +230,8 @@
                     <figure class="effect-text-two">
                         <img class="img-fluid" src="{% static 'main/img/5.  Маркировка, лицензирование, прослеживаемые товары, ФГИС, ЭДО.jpg' %}" alt=""/>
                         <figcaption>
-                            <h3>Маркировка, лицензирование, прослеживаемые товары, ФГИС, ЭДО</h3>
-                            <p>Работа в системе “Честный знак”, проведение маркировки, занесение данных по товарам, получение электронной подписи. Настроим ЭДО, внесем данные в ФГИС<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 3 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                            <h3>Маркировка,<br>лицензирование,<br>прослеживаемые товары,<br>ФГИС, ЭДО</h3>
+                            <p>Работа в системе “Честный знак”,<br>проведение маркировки,<br>занесение данных по товарам,<br>получение электронной подписи.<br>Настроим ЭДО,<br>внесем данные в ФГИС<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 3 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
                         </figcaption>
                     </figure>
                 </div>
@@ -239,8 +239,8 @@
                     <figure class="effect-text-two">
                         <img class="img-fluid" src="{% static 'main/img/6. Налоговые вопросы.jpg' %}" alt=""/>
                         <figcaption>
-                            <h3>Налоговые <br> вопросы</h3>
-                            <p>Возьмем на себя общение с налоговой, ответим на требования, разберемся с недоимкой. Получим патент. Правильно заполним и сдадим декларацию<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 4 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                            <h3>Налоговые вопросы</h3>
+                            <p>Возьмем на себя общение с налоговой,<br>ответим на требования,<br>разберемся с недоимкой.<br>Получим патент.<br>Правильно заполним<br>и сдадим декларацию<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 4 000 рублей</span> <br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
                         </figcaption>
                     </figure>
                 </div>
@@ -248,8 +248,8 @@
                     <figure class="effect-text-two">
                         <img class="img-fluid" src="{% static 'main/img/7. Регистрация, ликвидация бизнеса.jpg' %}" alt=""/>
                         <figcaption>
-                            <h3>Регистрация/ ликвидация бизнеса</h3>
-                            <p>Проведем онлайн регистрацию/ликвидацию/изменения ООО, ИП. Удаленно подадим уведомления в Вестник и Федресурс. Сдадим ликвидационную отчетность<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 8 000 рублей</span><br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a> </p>
+                            <h3>Регистрация,<br>ликвидация бизнеса</h3>
+                            <p>Проведем онлайн<br>регистрацию/ликвидацию/изменения<br>ООО, ИП.<br>Удаленно подадим уведомления в<br>Вестник и Федресурс.<br>Сдадим ликвидационную отчетность<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 8 000 рублей</span><br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a> </p>
                         </figcaption>
                     </figure>
                 </div>
@@ -257,8 +257,8 @@
                     <figure class="effect-text-two">
                         <img class="img-fluid" src="{% static 'main/img/8. Корпоративные юриддические задачи.jpg' %}" alt=""/>
                         <figcaption>
-                            <h3>Корпоративные юридические задачи</h3>
-                            <p>Составим договоры, понятно объясним юридические тонкости, проконсультируем, поможем в составлении претензий и урегулировании споров<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 5 000 рублей</span><br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                            <h3>Корпоративные<br>юридические задачи</h3>
+                            <p>Составим договоры,<br>понятно объясним<br>юридические тонкости,<br>проконсультируем,<br>поможем в составлении претензий<br>и урегулировании споров<br><span style="margin-top: 6px; margin-bottom: 6px; font-weight: bold">От 5 000 рублей</span><br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
                         </figcaption>
                     </figure>
                 </div>
@@ -267,8 +267,8 @@
                     <figure class="effect-text-two">
                         <img class="img-fluid" src="{% static 'main/img/9. Персональная помощь бизнес-ассистента под ваш запрос.jpg' %}" alt=""/>
                         <figcaption>
-                            <h3>Персональная помощь бизнес-ассистента под ваш запрос</h3>
-                            <p>Возможно ваш бизнес уникален и требует персонального подхода в решении нестандартных задач. Расскажите нам о них. Мы подберем оптимальные варианты<br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                            <h3>Персональная помощь<br>бизнес-ассистента под<br>ваш запрос</h3>
+                            <p>Возможно ваш бизнес уникален и<br>требует персонального подхода в<br>решении нестандартных задач.<br>Расскажите нам о них.<br>Мы подберем оптимальные варианты<br> <a style="margin-top: 7px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
                         </figcaption>
                     </figure>
                 </div>
