--- a/Businessas/main/static/main/css/style.css
+++ b/Businessas/main/static/main/css/style.css
@@ -429,7 +429,6 @@ h1{
 }
 .hover-text-one figure h3 {
   font-size: 90%;
-  word-spacing: -0.15em;
   font-weight: 300;
   padding-left: 4%;
   padding-right: 4%;
@@ -447,16 +446,9 @@ h1{
   /*font-family: "Rubik_rg";*/
 }
 
-
-
-@media (max-width: 60000px) and (min-width: 1320px) {
+@media (max-width: 60000px) and (min-width: 1090px) {
   .hover-text-one figure p {
-    font-size: 60%;
-  }
-}
-@media (max-width: 1319px) and (min-width: 1090px) {
-  .hover-text-one figure p {
-    font-size: 50%;
+    font-size: 55%;
   }
 }
 
@@ -557,7 +549,9 @@ figure.effect-text-two p {
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 2em;
+  /*padding: 2em;*/
+  padding-left: 1em;
+  padding-right: 1em;
   width: 100%;
   height: 60%;
   opacity: 0;
@@ -568,7 +562,7 @@ figure.effect-text-two p {
 figure.effect-text-two:hover h3 {
   color: #fff;
   -webkit-transform: translate3d(0,-50%,0) translate3d(0,-40px,0);
-  transform: translate3d(0,-70%,0) translate3d(0,-40px,0);
+  transform: translate3d(0,-70%,0) translate3d(0,-50px,0);
 }
 figure.effect-text-two:hover p {
   opacity: 1;
