--- a/Businessas/main/static/main/css/style.css
+++ b/Businessas/main/static/main/css/style.css
@@ -85,13 +85,36 @@ div[class^=col]{
 h1{
   margin-top: 19%;
   font-family: "Rubik-ext";
-  font-size: min(max(40px, 6vw), 336%)
+  font-size: min(max(40px, 5vw), 336%);
 }
 
 .my_txt{
   font-family: "Rubik_rg";
-  font-size: 31px;
   margin-left: 2.25%;
+}
+
+@media (max-width: 60000px) and (min-width: 1170px) {
+  .my_txt{
+    font-size: 35px;
+  }
+}
+
+@media (max-width: 1170px) and (min-width: 768px) {
+  .my_txt{
+    font-size: 2.5vw;
+  }
+  h1{
+    margin-top: 10%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .my_txt {
+    font-size: 170%;
+  }
+  h1{
+    margin-top: 7%;
+  }
 }
 
 .block_1{
@@ -446,9 +469,15 @@ h1{
   /*font-family: "Rubik_rg";*/
 }
 
-@media (max-width: 60000px) and (min-width: 1090px) {
+@media (max-width: 60000px) and (min-width: 1200px) {
   .hover-text-one figure p {
     font-size: 55%;
+  }
+}
+
+@media (max-width: 1200px) and (min-width: 1090px) {
+  .hover-text-one figure p {
+    font-size: 45%;
   }
 }
 
@@ -587,6 +616,7 @@ figure.effect-text-two:hover figcaption::before{
     display: none;
   }
 }
+
 
 .btn.hvr-hollow {
   display: inline-block;
