--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -106,8 +106,8 @@
                             <li><a href="#services">Услуги</a></li>
                             <li><a href="#team">Сотрудники</a></li>
                             <li><a href="#testimonials">Клиенты</a></li>
-                            <li><div class="my_href_b"><a href="tel:8 (910) 748-02-345" style="padding-left: 100px;">8 (910) 748-02-345</a></div></li>
-                            <li><div class="my_href_s"><a href="tel:8 (910) 748-02-345">8 (910) 748-02-345</a></div></li>
+                            <li><div class="my_href_b"><a href="tel:8 (910) 748-02-34" style="padding-left: 100px;">8 (910) 748-02-34</a></div></li>
+                            <li><div class="my_href_s"><a href="tel:8 (910) 748-02-34">8 (910) 748-02-34</a></div></li>
                         </ul>
                     </nav>
                 </div>
@@ -195,7 +195,10 @@
                             <img class="img-fluid" src="{% static 'main/img/1. Бухгалтерское обсуживание.jpg' %}" alt=""/>
                             <figcaption>
                                 <h3>Бухгалтерское обслуживание</h3>
-                                <p>Подготовим платёжки, счета, накладные. Проведем сверки.<br>Сдадим отчеты.<br>Правильно трудоустроим<br>сотрудников,<br>начислим зарплату,<br>оформим отпуск и больничный. Быстро разблокируем счет<br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 5 000 рублей</span> <br><a style="margin-top: 2px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                                <p>Подготовим платёжки, счета, накладные. Проведем сверки.<br>Сдадим отчеты.<br>Правильно трудоустроим<br>сотрудников,<br>начислим зарплату,<br>оформим отпуск и больничный. Быстро разблокируем счет
+                                    <br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 5 000 рублей</span>
+                                    <br><a style="margin-top: 2px;" href="#!" class="btn hvr-hollow btn-lg">оставить заявку</a>
+                                </p>
                             </figcaption>
                         </figure>
                     </div>
@@ -204,7 +207,10 @@
                             <img class="img-fluid" src="{% static 'main/img/2. Сопровождение работ с маркетплейсами.jpg' %}" alt=""/>
                             <figcaption>
                                 <h3>Сопровождение работы<br>с маркетплейсами</h3>
-                                <p>Автоматизация учета, налоги,<br>экспертный аудит правильности<br>расчетов за проданный товар<br>с учетом удержаний и бонусов<br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 10 000 рублей</span> <br><a style="margin-top: 2px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                                <p>Автоматизация учета, налоги,<br>экспертный аудит правильности<br>расчетов за проданный товар<br>с учетом удержаний и бонусов
+                                    <br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 10 000 рублей</span>
+                                    <br><a style="margin-top: 2px;" href="#!" class="btn hvr-hollow btn-lg">оставить заявку</a>
+                                </p>
                             </figcaption>
                         </figure>
                     </div>
@@ -213,7 +219,10 @@
                             <img class="img-fluid" src="{% static 'main/img/3. Оптимизация работы с онлайн-кассами, эквайрингом.jpg' %}" alt=""/>
                             <figcaption>
                                 <h3>Оптимизация работы<br>с онлайн-кассами,<br>эквайрингом </h3>
-                                <p>Чеки коррекции, ОФД.<br>Постановка/снятие кассы<br>на учет в налоговой.<br>Отражение поступлений<br>эквайринга в учете<br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 1 000 рублей</span> <br><a style="margin-top: 2px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                                <p>Чеки коррекции, ОФД.<br>Постановка/снятие кассы<br>на учет в налоговой.<br>Отражение поступлений<br>эквайринга в учете
+                                    <br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 1 000 рублей</span>
+                                    <br><a style="margin-top: 2px;" href="#!" class="btn hvr-hollow btn-lg">оставить заявку</a>
+                                </p>
                             </figcaption>
                         </figure>
                     </div>
@@ -222,7 +231,10 @@
                             <img class="img-fluid" src="{% static 'main/img/4. Подбор и внедрение облачныхрешений для приема денег онлайн.jpg' %}" alt=""/>
                             <figcaption>
                                 <h3>Подбор и внедрение<br>облачных решений для<br>приема денег онлайн </h3>
-                                <p>Прием денег через интернет на сайт,<br>по ссылкам, через СБП,<br>через платежных агрегаторов<br>ЮКаssa, Продамус, Робокасса и др.<br>Или оплата на месте по QR-коду<br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 3 000 рублей</span> <br><a style="margin-top: 2px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                                <p>Прием денег через интернет на сайт,<br>по ссылкам, через СБП,<br>через платежных агрегаторов<br>ЮКаssa, Продамус, Робокасса и др.<br>Или оплата на месте по QR-коду
+                                    <br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 3 000 рублей</span>
+                                    <br><a style="margin-top: 2px;" href="#!" class="btn hvr-hollow btn-lg">оставить заявку</a>
+                                </p>
                             </figcaption>
                         </figure>
                     </div>
@@ -231,7 +243,10 @@
                             <img class="img-fluid" src="{% static 'main/img/5.  Маркировка, лицензирование, прослеживаемые товары, ФГИС, ЭДО.jpg' %}" alt=""/>
                             <figcaption>
                                 <h3>Маркировка,<br>лицензирование,<br>прослеживаемые товары,<br>ФГИС, ЭДО</h3>
-                                <p>Работа в системе “Честный знак”,<br>проведение маркировки,<br>занесение данных по товарам,<br>получение электронной подписи.<br>Настроим ЭДО,<br>внесем данные в ФГИС<br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 3 000 рублей</span> <br><a style="margin-top: 2px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                                <p>Работа в системе “Честный знак”,<br>проведение маркировки,<br>занесение данных по товарам,<br>получение электронной подписи.<br>Настроим ЭДО,<br>внесем данные в ФГИС
+                                    <br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 3 000 рублей</span>
+                                    <br><a style="margin-top: 2px;" href="#!" class="btn hvr-hollow btn-lg">оставить заявку</a>
+                                </p>
                             </figcaption>
                         </figure>
                     </div>
@@ -240,7 +255,10 @@
                             <img class="img-fluid" src="{% static 'main/img/6. Налоговые вопросы.jpg' %}" alt=""/>
                             <figcaption>
                                 <h3>Налоговые вопросы</h3>
-                                <p>Возьмем на себя общение с налоговой,<br>ответим на требования,<br>разберемся с недоимкой.<br>Получим патент.<br>Правильно заполним<br>и сдадим декларацию<br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 4 000 рублей</span> <br><a style="margin-top: 2px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                                <p>Возьмем на себя общение с налоговой,<br>ответим на требования,<br>разберемся с недоимкой.<br>Получим патент.<br>Правильно заполним<br>и сдадим декларацию
+                                    <br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 4 000 рублей</span>
+                                    <br><a style="margin-top: 2px;" href="#!" class="btn hvr-hollow btn-lg">оставить заявку</a>
+                                </p>
                             </figcaption>
                         </figure>
                     </div>
@@ -249,7 +267,10 @@
                             <img class="img-fluid" src="{% static 'main/img/7. Регистрация, ликвидация бизнеса.jpg' %}" alt=""/>
                             <figcaption>
                                 <h3>Регистрация,<br>ликвидация бизнеса</h3>
-                                <p>Проведем онлайн<br>регистрацию/ликвидацию/изменения<br>ООО, ИП.<br>Удаленно подадим уведомления в<br>Вестник и Федресурс.<br>Сдадим ликвидационную отчетность<br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 8 000 рублей</span> <br><a style="margin-top: 2px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                                <p>Проведем онлайн<br>регистрацию/ликвидацию/изменения<br>ООО, ИП.<br>Удаленно подадим уведомления в<br>Вестник и Федресурс.<br>Сдадим ликвидационную отчетность
+                                    <br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 8 000 рублей</span>
+                                    <br><a style="margin-top: 2px;" href="#!" class="btn hvr-hollow btn-lg">оставить заявку</a>
+                                </p>
                             </figcaption>
                         </figure>
                     </div>
@@ -258,7 +279,10 @@
                             <img class="img-fluid" src="{% static 'main/img/8. Корпоративные юриддические задачи.jpg' %}" alt=""/>
                             <figcaption>
                                 <h3>Корпоративные<br>юридические задачи</h3>
-                                <p>Составим договоры,<br>понятно объясним<br>юридические тонкости,<br>проконсультируем,<br>поможем в составлении претензий<br>и урегулировании споров<br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 5 000 рублей</span> <br><a style="margin-top: 2px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                                <p>Составим договоры,<br>понятно объясним<br>юридические тонкости,<br>проконсультируем,<br>поможем в составлении претензий<br>и урегулировании споров
+                                    <br><span class="btn btn-primary" style="background-color: #007bff00; border-color: #007bff00; font-weight: bold; font-size: 100%">От 5 000 рублей</span>
+                                    <br><a style="margin-top: 2px;" href="#!" class="btn hvr-hollow btn-lg">оставить заявку</a>
+                                </p>
                             </figcaption>
                         </figure>
                     </div>
@@ -268,7 +292,9 @@
                             <img class="img-fluid" src="{% static 'main/img/9. Персональная помощь бизнес-ассистента под ваш запрос.jpg' %}" alt=""/>
                             <figcaption>
                                 <h3>Персональная помощь<br>бизнес-ассистента под<br>ваш запрос</h3>
-                                <p>Возможно ваш бизнес уникален и<br>требует персонального подхода в<br>решении нестандартных задач.<br>Расскажите нам о них.<br>Мы подберем оптимальные варианты<br> <a style="margin-top: 10px;" href="" class="btn hvr-hollow btn-lg">оставить заявку</a></p>
+                                <p>Возможно ваш бизнес уникален и<br>требует персонального подхода в<br>решении нестандартных задач.<br>Расскажите нам о них.<br>Мы подберем оптимальные варианты
+                                    <br> <a style="margin-top: 10px;" href="#!" class="btn hvr-hollow btn-lg">оставить заявку</a>
+                                </p>
                             </figcaption>
                         </figure>
                     </div>
@@ -286,7 +312,7 @@
                 <img class="img-fluid col-12" style="max-width: 80%;" src="{% static 'main/img/img.png' %}">
                 <div class="col-12" style="padding-right: 5%; padding-left: 5%;">
                     <div class="row ">
-                        <div class="col-3 text-center phone_wb"><p style="font-family: Rubik-ext">Оставьте <a href="" style="color: #e50e3a; text-decoration: none;">заявку</a></p></div>
+                        <div class="col-3 text-center phone_wb"><p style="font-family: Rubik-ext">Оставьте <a href="#!" style="color: #e50e3a; text-decoration: none;">заявку</a></p></div>
                         <div class="col-1"></div>
                         <div class="col-4 text-center phone_wb"><p style="font-family: Rubik-ext">Мы позвоним</p>
                             <p style="font-family: Rubik_rg">Наш специалист свяжется с вами и обсудит все вопросы</p></div>
@@ -307,7 +333,7 @@
                     <div class="col-12 text-left white-space: nowrap;" style="margin-bottom: 20px;">
                         <div class="row">
                             <div class="col-4 text-right"><img style="max-width: 90px;margin-bottom: 20px;" src="{% static 'main/img/num1.png' %}"></div>
-                            <div class="col-8" style="margin-top: auto; margin-bottom: auto;"><p style="font-family: Rubik-ext; font-size: 140%"> Оставьте <a href="" style="color: #e50e3a; text-decoration: none;">заявку</a></p></div>
+                            <div class="col-8" style="margin-top: auto; margin-bottom: auto;"><p style="font-family: Rubik-ext; font-size: 140%"> Оставьте <a href="#!" style="color: #e50e3a; text-decoration: none;">заявку</a></p></div>
                         </div>
                     </div>
                     <div class="col-12 text-left white-space: nowrap;" style="margin-bottom: 20px;">
@@ -531,7 +557,7 @@
                             <textarea class="form-control" id="exampleFormControlTextarea3" style="margin-bottom: 5%; height: 114%;" rows="2" placeholder="Комментарий"></textarea>
                         </div>
                         <div class="d-grid gap-2 d-flex justify-content-end">
-                            <button type="submit" style="width: 33.5%; max-width: 270px; border-top-width: 0; border-left-width: 0; border-bottom-width: 0; border-right-width: 0;" class="btn hvr-hollow btn-lg">Оставить заявку</button>
+                            <button type="submit" href="#!" style="width: 33.5%; max-width: 270px; border-top-width: 0; border-left-width: 0; border-bottom-width: 0; border-right-width: 0;" class="btn hvr-hollow btn-lg">Оставить заявку</button>
                         </div>
                     </form>
                 </div>
@@ -572,7 +598,7 @@
                         <div class="col-6">Соц. сети:
                             <br>
                             <a href="https://telegram.me/+79107480234"><img src="{% static 'main/img/2022-09-16_15-43-40.png' %}"></a>
-                            <a href=""><img src="{% static 'main/img/2022-09-16_15-45-42.png' %}"></a>
+                            <a href="#!"><img src="{% static 'main/img/2022-09-16_15-45-42.png' %}"></a>
                             <a href="https://wa.me/+79107480234"><img src="{% static 'main/img/2022-09-16_15-49-11.png' %}"></a>
                         </div>
                     </div>
@@ -605,5 +631,7 @@
 
 <!-- Template Main Javascript File -->
 <script src="{% static 'main/js/main.js' %}"></script>
+<!--<script src="{% static 'main/js/device.js' %}"></script>-->
+
 </body>
 </html>
