--- a/Businessas/main/static/main/css/style.css
+++ b/Businessas/main/static/main/css/style.css
@@ -70,15 +70,12 @@ div[class^=col]{
   height: 70px;
   transition: all 0.5s;
   z-index: 997;
-  transition: all 0.5s;
   padding: 20px 0;
   position: fixed;
   left: 0;
   top: 0;
   right: 0;
   background-color: rgba(255, 255, 255);
-  transition: all 0.5s;
-  z-index: 997;
 }
 
 h1{
@@ -93,9 +90,9 @@ h1{
   margin-left: auto;
   margin-right: auto;
   border-radius: 15px;
-  border-bottom-width: 0px;
-  border-right-width: 0px;
-  border-top-width: 0px;
+  border-bottom-width: 0;
+  border-right-width: 0;
+  border-top-width: 0;
 }
 
 .my_btn:hover{
@@ -144,7 +141,7 @@ h1{
   height: 70px;
   padding: 15px 0;
   background-color: rgba(255, 255, 255, 0.85);
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
+  box-shadow: 0 0 30px rgba(127, 137, 161, 0.3);
 }
 
 #header.header-scrolled #topbar,
@@ -231,7 +228,7 @@ h1{
   visibility: hidden;
   padding: 10px 0;
   background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  box-shadow: 0 0 30px rgba(127, 137, 161, 0.25);
   transition: ease all 0.3s;
 }
 
@@ -297,9 +294,9 @@ h1{
   overflow-y: auto;
   left: -260px;
   width: 210px;
-  padding-top: 0px;
+  padding-top: 0;
   background: rgba(255, 255, 255, 0.85);
-  box-shadow: 0px 20px 30px rgb(127 137 161 / 30%);
+  box-shadow: 0 20px 30px rgb(127 137 161 / 30%);
   transition: 0.4s;
 }
 
@@ -801,16 +798,14 @@ figure.effect-text-two:hover figcaption::before{
 #testimonials .testimonial-item h3 {
   font-size: 20px;
   font-weight: bold;
-  margin: 10px 0 5px 0;
   color: #111;
-  margin-left: 140px;
+  margin: 10px 0 5px 140px;
 }
 
 #testimonials .testimonial-item h4 {
   font-size: 14px;
   color: #999;
-  margin: 0 0 15px 0;
-  margin-left: 140px;
+  margin: 0 0 15px 140px;
 }
 
 #testimonials .testimonial-item p {
@@ -885,3 +880,4 @@ figure.effect-text-two:hover figcaption::before{
     background: url(../img/image_2022-11-23_13-44-27.png) no-repeat;
   }
 }
+
