--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -430,7 +430,7 @@
                 <img class="img-fluid col-12" style="max-width: 80%;" src="{% static 'main/img/img.png' %}">
                 <div class="col-12" style="padding-right: 5%; padding-left: 5%;">
                     <div class="row ">
-                        <div class="col-3 text-center phone_wb"><p style="font-family: Rubik-ext">Оставьте <a href="#!" style="color: #e50e3a; text-decoration: none;">заявку</a></p></div>
+                        <div class="col-3 text-center phone_wb"><p style="font-family: Rubik-ext">Оставьте <a href="javascript:show_exampleModal_3();" style="color: #e50e3a; text-decoration: none;">заявку</a></p></div>
                         <div class="col-1"></div>
                         <div class="col-4 text-center phone_wb"><p style="font-family: Rubik-ext">Мы позвоним</p>
                             <p style="font-family: Rubik_rg">Наш специалист свяжется с вами и обсудит все вопросы</p></div>
@@ -451,7 +451,7 @@
                     <div class="col-12 text-left white-space: nowrap;" style="margin-bottom: 20px;">
                         <div class="row">
                             <div class="col-4 text-right"><img style="max-width: 90px;margin-bottom: 20px;" src="{% static 'main/img/num1.png' %}"></div>
-                            <div class="col-8" style="margin-top: auto; margin-bottom: auto;"><p style="font-family: Rubik-ext; font-size: 140%"> Оставьте <a href="#!" style="color: #e50e3a; text-decoration: none;">заявку</a></p></div>
+                            <div class="col-8" style="margin-top: auto; margin-bottom: auto;"><p style="font-family: Rubik-ext; font-size: 140%"> Оставьте <a href="javascript:show_exampleModal_3();" style="color: #e50e3a; text-decoration: none;">заявку</a></p></div>
                         </div>
                     </div>
                     <div class="col-12 text-left white-space: nowrap;" style="margin-bottom: 20px;">
@@ -481,7 +481,7 @@
                 <div class="phone_zg" style="background: #f5f5f5">Наши сотрудники</div>
                 <p></p>
                 <div class="content_flip">
-                    <a class="card" id="num_1" href="#!">
+                    <a class="card" id="num_1">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC2991.jpg' %}" alt="">
                         </div>
@@ -495,7 +495,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="card" id="num_2" href="#!">
+                    <a class="card" id="num_2">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC3204.jpg' %}" alt="">
                         </div>
@@ -509,7 +509,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="card" id="num_3" href="#!">
+                    <a class="card" id="num_3">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC2907.jpg' %}" alt="">
                         </div>
@@ -523,7 +523,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="card" id="num_4" href="#!">
+                    <a class="card" id="num_4">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC3575.jpg' %}" alt="">
                         </div>
@@ -537,7 +537,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="card" id="num_5" href="#!">
+                    <a class="card" id="num_5">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC3426.jpg' %}" alt="">
                         </div>
@@ -551,7 +551,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="card" id="num_6" href="#!">
+                    <a class="card" id="num_6">
                         <div class="front">
                             <img src="{% static 'main/img/_DSC3156.jpg' %}" alt="">
                         </div>
@@ -566,7 +566,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="card" id="num_7" href="#!">
+                    <a class="card" id="num_7">
                         <div class="front">
                             <img src="{% static 'main/img/DSC07232.png' %}" alt="">
                         </div>
@@ -691,7 +691,7 @@
                             <textarea class="form-control" id="text_msg" style="margin-bottom: 5%; height: 114%;" rows="3" placeholder="Текст обращения"></textarea>
                         </div>
                         <div class="d-grid gap-2 d-flex justify-content-end">
-                            <button type="button" id="submitButton" onclick="call_request();" href="#!" style="width: 33.5%; max-width: 270px; border-top-width: 0; border-left-width: 0; border-bottom-width: 0; border-right-width: 0;" data-toggle="modal" data-target="#exampleModal" class="btn hvr-hollow btn-lg">Оставить заявку</button>
+                            <button type="button" id="submitButton" onclick="call_request();" style="width: 33.5%; max-width: 270px; border-top-width: 0; border-left-width: 0; border-bottom-width: 0; border-right-width: 0;" data-toggle="modal" data-target="#exampleModal" class="btn hvr-hollow btn-lg">Оставить заявку</button>
                         </div>
                     </form>
                 </div>
