Исправлен мелкий недостаток 2

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -773,7 +773,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content" style="background-color: #f5f5f5">
                     <div class="modal-header">
-                        <h5 class="modal-title text-center" style="margin-left: 31%; font-family: Rubik-ext; color: #e50e3a;" id="exampleModalLabel">Заявка отправлена</h5>
+                        <h5 class="modal-title text-center" style="margin-left: 31%; font-family: Rubik-ext; color: #e50e3a;" id="exampleModalLabel">Оставьте заявку</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -799,11 +799,10 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content" style="background-color: #f5f5f5">
                     <div class="modal-body" style="padding-left: 12%; padding-right: 12%;">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                         <div class="row">
-                            <div class="col-11"></div>
-                            <button type="button" class="close text-right" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
                             <div class="col-12"><h2 class="phone_zg text-center " style="margin-top: 0px; background: #f5f5f5"><span style="color: #e50e3a">Оставьте заявку</span></h2></div>
                             <div class="col-12"><h2 class="phone_wb text-center" style="margin-top: 0px; background: #f5f5f5">мы вам перезвоним </h2></div>
                         </div>
