Исправлен мелкий недостаток 3

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -731,9 +731,9 @@
                         </div>
                         <div class="col-6">Соц. сети:
                             <br>
-                            <a href="https://telegram.me/+79107480234"><img src="{% static 'main/img/2022-09-16_15-43-40.png' %}"></a>
-                            <a href="#!"><img src="{% static 'main/img/2022-09-16_15-45-42.png' %}"></a>
-                            <a href="https://wa.me/+79107480234"><img src="{% static 'main/img/2022-09-16_15-49-11.png' %}"></a>
+                            <a href="https://telegram.me/+79107480234" target="_blank"><img src="{% static 'main/img/2022-09-16_15-43-40.png' %}"></a>
+                            <a href="#!"><img src="{% static 'main/img/2022-09-16_15-45-42.png' %}" target="_blank"></a>
+                            <a href="https://wa.me/+79107480234" target="_blank"><img src="{% static 'main/img/2022-09-16_15-49-11.png' %}"></a>
                         </div>
                     </div>
                 </div>
